# torch-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  update.sh
docker/torchlab/: .env  Dockerfile  docker-compose.yaml
tlab/: __init__.py  data.py  experiment.py  observation.py  optimize.py  xconfiguration.py
tlab/datasets/: __init__.py  algorithmic.py  coded_features.py  dataset.py  lab_dataset.py  mnist.py  shakespeare.py  sparse_features.py
tlab/models/: __init__.py  alexnet.py  batch_transformer.py  beta_components.py  components.py  conv.py  diffusion.py  embed_mlp.py  lab_model.py  mlp.py  reference_configs.py  simple_encoder.py  toy_encoder.py  transformer.py  unet_contextual.py
tlab/optimizers/: __init__.py  diffusion.py  exp_optim.py  lab_optimizer.py
tlab/utils/: __init__.py  analysis.py  hookpoint.py  util.py  viz.py
