[tool.poetry]
name = "tlab"
version = "0.1.0"
description = "Experimentation framework for PyTorch"
authors = ["Derek Larson <larson.derek.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^2.0"
torchvision = "^0.15"
numpy = "1.24.2"
einops = "0.6.0"
pandas = "1.5.3"
parse = "1.19.0"
plotly = "5.12.0"
prettytable = "3.4.1"
tqdm = "4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
